# respostas-backend

./: BACKEND.md
q1/: Dockerfile  Dockerfile.otimizado  QUESTAO.md  docker-build.bash  pyproject.toml  requirements.txt  tempo_etapas1.txt  tempo_etapas2.txt
q1/app/: main.py
q2/: Dockerfile  QUESTAO.md
q3/: QUESTAO.md
q4/: QUESTAO.md  pyproject.toml
